# AI-company

./: .gitignore  CHANGELOG.md  CHANGELOG.zh-CN.md  CHANGELOG.zh-TW.md  INSTALL.zh-TW.md  README.md  README.zh-CN.md  README.zh-TW.md  install.py  pyproject.toml  tools_run_weekly_summary.py
.claude/agents/: engineering-backend-architect.md  engineering-code-reviewer.zh-TW.md  engineering-devops-automator.md  engineering-mcp-builder.md  engineering-rapid-prototyper.md  engineering-software-architect.zh-TW.md  engineering-sre.zh-TW.md  management-tech-lead.md  testing-api-tester.md  testing-bug-fixer.md  testing-performance-benchmarker.md  testing-qa-engineer.md
dashboard/src/: App.tsx
dashboard/src/api/: client.ts  ecosystem.ts
dashboard/src/context/: ProjectContext.tsx
dashboard/src/i18n/: en.ts  index.ts  zh-tw.ts  zh.ts
dashboard/src/pages/: EcosystemDetailPage.tsx  EcosystemListPage.tsx  EcosystemResearchPage.tsx  ProjectDetailPage.tsx  SettingsPage.tsx
docs/: dev-machine-migration.md  ecosystem-recipes.md
plugin/: .mcp.json
plugin/.claude-plugin/: marketplace.json  plugin.json
plugin/agents/: debate-advocate.md  debate-critic.md  engineering-ai-engineer.md  engineering-database-optimizer.md  engineering-frontend-developer.zh-TW.md  engineering-git-workflow-master.md  engineering-mobile-developer.md  engineering-security-engineer.md  management-project-manager.md  specialized-workflow-architect.md  support-meeting-facilitator.zh-TW.md  support-technical-writer.md  team-member.md
plugin/dashboard-dist/: index.html
plugin/dashboard-dist/assets/: index-3fLSGGA-.js  index-BktSlmI7.css  index-C7To4X0H.css  index-CHPuAVtl.js  index-CSr0bqvv.js  index-CdgPhqd-.css  index-CzWomHgi.js  index-DEtF_hz7.css  index-DGIlsEDc.css  index-DL1r2YUW.js  index-DLQH3akN.js  index-Drh_Zf9x.js  index-VBpril_l.js  index-chX1pGve.css  index-lRiBpjw6.js
plugin/hooks/: context_tracker.py  hooks.json  meeting_ecosystem_writeback.py  session_bootstrap.py
scripts/: backfill_deep_review_sections.py  bench_eco_compare.py  bench_ecosystem_search.py  cleanup_orphan_pipeline_subtasks.py  install.py  smoke_v151_stage_facet.py  smoke_v15_release_e2e.py  smoke_v15e_frontend.py  smoke_v15e_mobile.py  test_ecosystem_detail.py  test_ecosystem_filter.py  test_ecosystem_frontend.py  uninstall.py
src/aiteam/: __init__.py  types.py
src/aiteam/api/: deps.py  hook_translator.py
src/aiteam/config/: settings.py
src/aiteam/hooks/: context_tracker.py  deep_review_link.py  inject_subagent_context.py  pipeline_gate.py  session_bootstrap.py  workflow_reminder.py
src/aiteam/mcp/: _base.py
tests/integration/: test_ecosystem_deep_review_e2e.py  test_ecosystem_shallow_queue_e2e.py  test_scan_run.py
tests/unit/: test_cli.py  test_context_tracker.py  test_mcp_autostart.py  test_os_restart_api.py  test_sqlite_migration.py
(+99 files in other folders)
